# fpcap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/actions/debian-11-docker-action/: Dockerfile  action.yml
.github/actions/debian-12-docker-action/: Dockerfile  action.yml
.github/actions/debian-13-docker-action/: Dockerfile  action.yml
.github/workflows/: build.yml  linux-build.yml  ubuntu-latest-build.yaml
benchmark/: CMakeLists.txt  mmpr_vs_pcapplusplus.cpp
benchmark/src/: packet_reading.cpp
cmake/: FindZSTD.cmake  Findfmt.cmake  add_FetchContent_MakeAvailable.cmake  fpcapConfig.cmake.in  fpcapTargets.cmake  mmprConfig.cmake.in  mmprTargets.cmake
docker/: Dockerfile
examples/: CMakeLists.txt  example-block.cpp  example-decompression.cpp  example-metadata.cpp  example-pcap-simple.cpp  example-simple.cpp  gzip_pcap.cpp  modified_pcap_simple.cpp  packet_iterator.cpp  pcap_decompression.cpp  pcap_simple.cpp  pcap_simple_fread.cpp  pcap_simple_mm.cpp  pcap_simple_stream.cpp  pcap_writer.cpp  pcapng_block_parser.cpp  pcapng_decompression.cpp  pcapng_metadata.cpp  pcapng_simple.cpp  pcapng_writer.cpp  statistics_cli.cpp
include/fpcap/: Constants.hpp  MagicNumber.hpp  Packet.hpp  PacketIterator.hpp  PacketReader.hpp  TraceInterface.hpp  fpcap.hpp  util.hpp
include/fpcap/filesystem/: FReadFileReader.hpp  FileReader.hpp  FileWriter.hpp  MMapFileReader.hpp  Reader.hpp  StreamFileWriter.hpp  Writer.hpp  ZstdFileReader.hpp
include/fpcap/filesystem/reading/: FReadFileReader.hpp  FileReader.hpp  MMapFileReader.hpp  ZstdFileReader.hpp
include/fpcap/filesystem/writing/: FileWriter.hpp  StreamFileWriter.hpp
include/fpcap/modified_pcap/: ModifiedPcap.hpp  ModifiedPcapFileHeader.hpp  ModifiedPcapPacketRecord.hpp  ModifiedPcapParser.hpp  ModifiedPcapReader.hpp
include/fpcap/pcap/: PcapFileHeader.hpp  PcapPacketRecord.hpp  PcapParser.hpp  PcapReader.hpp  PcapWriter.hpp
include/fpcap/pcapng/: PcapNg.hpp  PcapNgBlockOption.hpp  PcapNgBlockOptionParser.hpp  PcapNgBlockParser.hpp  PcapNgBlockType.hpp  PcapNgEnhancedPacketBlock.hpp  PcapNgInterfaceDescriptionBlock.hpp  PcapNgInterfaceStatisticsBlock.hpp  PcapNgPacketBlock.hpp  PcapNgReader.hpp  PcapNgSectionHeaderBlock.hpp  PcapNgSimplePacketBlock.hpp  PcapNgWriter.hpp
include/mmpr/: GzipDecompressor.h  MMPcapNgReader.h  MMPcapReader.h  PcapNgBlockOptionParser.h  PcapNgBlockParser.h  PcapNgReader.h  PcapParser.h  ZstdDecompressor.h  ZstdPcapNgReader.h  mmpr.h  mmpr.hpp  modified_pcap.h  pcap.h  pcapng.h  util.h  util.hpp
include/mmpr/filesystem/: FReadFileReader.h  FileReader.h  MMapFileReader.h  StreamFileReader.h  ZstdFileReader.h
include/mmpr/filesystem/reading/: FReadFileReader.h  FReadFileReader.hpp  FileReader.h  FileReader.hpp  MMapFileReader.h  MMapFileReader.hpp  ZstdFileReader.h  ZstdFileReader.hpp
include/mmpr/filesystem/writing/: FileWriter.h  FileWriter.hpp  StreamFileWriter.h  StreamFileWriter.hpp
include/mmpr/modified_pcap/: MMModifiedPcapReader.h  ModifiedPcapParser.h  ModifiedPcapParser.hpp  ModifiedPcapReader.h  ModifiedPcapReader.hpp
include/mmpr/pcap/: FReadPcapReader.h  GzipPcapReader.h  MMPcapReader.h  PcapParser.h  PcapParser.hpp  PcapReader.h  PcapReader.hpp  PcapWriter.h  PcapWriter.hpp  StreamPcapParser.h  StreamPcapReader.h
include/mmpr/pcapng/: FReadPcapNgReader.h  MMPcapNgReader.h  PcapNgBlockOptionParser.h  PcapNgBlockOptionParser.hpp  PcapNgBlockParser.h  PcapNgBlockParser.hpp  PcapNgReader.h  PcapNgReader.hpp  ZstdPcapNgReader.h
libs/: .gitignore
src/: CMakeLists.txt  GzipDecompressor.cpp  MMPcapNgReader.cpp  MMPcapReader.cpp  PacketReader.cpp  PcapNgBlockOptionParser.cpp  PcapNgBlockParser.cpp  PcapNgReader.cpp  Reader.cpp  ZstdDecompressor.cpp  ZstdPcapNgReader.cpp  fpcap.cpp  mmpr.cpp  util.cpp  util.h
src/filesystem/: FReadFileReader.cpp  FileReader.cpp  FileWriter.cpp  MMapFileReader.cpp  Reader.cpp  StreamFileWriter.cpp  Writer.cpp  ZstdFileReader.cpp
src/filesystem/reading/: FReadFileReader.cpp  FileReader.cpp  MMapFileReader.cpp  ZstdFileReader.cpp
src/filesystem/writing/: FileWriter.cpp  StreamFileWriter.cpp
src/modified_pcap/: MMModifiedReader.cpp  ModifiedPcapParser.cpp  ModifiedPcapReader.cpp
src/pcap/: FReadPcapReader.cpp  GzipPcapReader.cpp  MMPcapReader.cpp  PcapParser.cpp  PcapReader.cpp  PcapWriter.cpp  StreamPcapReader.cpp
src/pcapng/: FReadPcapNgReader.cpp  MMPcapNgReader.cpp  PcapNgBlockOptionParser.cpp  PcapNgBlockParser.cpp  PcapNgReader.cpp  PcapNgWriter.cpp  ZstdPcapNgReader.cpp
tests/: CMakeLists.txt  main.cpp
tests/src/: testFileReader.cpp  testFpcap.cpp  testMMPcapNgReader.cpp  testMMPcapReader.cpp  testMmpr.cpp  testPacketIterator.cpp  testPacketReader.cpp  testUtil.cpp  testZstdPcapNgReader.cpp
tests/src/filesystem/: testFReadFileReader.cpp  testFileReader.cpp  testMMapFileReader.cpp  testReader.cpp  testStreamFileWriter.cpp  testWriter.cpp  testZstdFileReader.cpp
tests/src/filesystem/reading/: testFReadFileReader.cpp  testFileReader.cpp  testMMapFileReader.cpp  testZstdFileReader.cpp
tests/src/modified_pcap/: testFReadModifiedPcapReader.cpp  testMMModifiedPcapReader.cpp  testZstdModifiedPcapReader.cpp
tests/src/pcap/: testFReadPcapReader.cpp  testMMPcapReader.cpp  testPcapWriter.cpp  testStreamPcapReader.cpp  testZstdPcapReader.cpp
tests/src/pcapng/: testFReadPcapNgReader.cpp  testMMPcapNgReader.cpp  testPcapNgWriter.cpp  testSimplePacketBlock.cpp  testTraceInterfaces.cpp  testZstdPcapNgReader.cpp
