add_executable(fpcap_example_modified_pcap_simple modified_pcap_simple.cpp)
target_link_libraries(fpcap_example_modified_pcap_simple PRIVATE fpcap)

add_executable(fpcap_example_pcap_decompression pcap_decompression.cpp)
target_link_libraries(fpcap_example_pcap_decompression PRIVATE fpcap)

add_executable(fpcap_example_pcapng_simple pcapng_simple.cpp)
target_link_libraries(fpcap_example_pcapng_simple PRIVATE fpcap)

add_executable(fpcap_example_pcapng_block_parser pcapng_block_parser.cpp)
target_link_libraries(fpcap_example_pcapng_block_parser PRIVATE fpcap)

add_executable(fpcap_example_pcapng_decompression pcapng_decompression.cpp)
target_link_libraries(fpcap_example_pcapng_decompression PRIVATE fpcap)

add_executable(fpcap_example_pcapng_metadata pcapng_metadata.cpp)
target_link_libraries(fpcap_example_pcapng_metadata PRIVATE fpcap)

add_executable(fpcap_example_pcap_simple_fread pcap_simple_fread.cpp)
target_link_libraries(fpcap_example_pcap_simple_fread PRIVATE fpcap)

add_executable(fpcap_example_pcap_simple_mm pcap_simple_mm.cpp)
target_link_libraries(fpcap_example_pcap_simple_mm PRIVATE fpcap)

add_executable(fpcap_example_pcap_writer pcap_writer.cpp)
target_link_libraries(fpcap_example_pcap_writer PRIVATE fpcap)

add_executable(fpcap_statistics_cli statistics_cli.cpp)
target_link_libraries(fpcap_statistics_cli PRIVATE fpcap)
